srcnn_hls/solution1/.autopilot/db/srcnn.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:386:2: warning: Added loop label VITIS_LOOP_95_1:   [xilinx-label-all-loops]
 for (int n2 = 0; n2 < 32; ++n2) {
 ^~~
 VITIS_LOOP_95_1: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:386:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:398:2: warning: Added loop label VITIS_LOOP_107_2:   [xilinx-label-all-loops]
 for (int i=0;i<9;++i) {
 ^~~
 VITIS_LOOP_107_2: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:398:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:452:48: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=linebuf type=ram_2p impl=bram
                                               ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:461:2: warning: Added loop label VITIS_LOOP_170_1:   [xilinx-label-all-loops]
 for (int y0 = -(5/2); y0 < th_eff + (5/2); ++y0) {
 ^~~
 VITIS_LOOP_170_1: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:461:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:462:5: warning: Added loop label VITIS_LOOP_171_2:   [xilinx-label-all-loops]
    for (int x0 = -(5/2); x0 < tw_eff + (5/2); ++x0) {
    ^~~
    VITIS_LOOP_171_2: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:462:5: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:515:2: warning: Added loop label VITIS_LOOP_224_3:   [xilinx-label-all-loops]
 for (int i=0;i<5;++i){
 ^~~
 VITIS_LOOP_224_3: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:515:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:516:12: warning: Added loop label VITIS_LOOP_225_4:   [xilinx-label-all-loops]
           for (int j=0;j<5;++j){
           ^~~
           VITIS_LOOP_225_4: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:516:12: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:525:2: warning: Added loop label VITIS_LOOP_234_5:   [xilinx-label-all-loops]
 for (int ky=0;ky<5;++ky){
 ^~~
 VITIS_LOOP_234_5: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:525:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:527:2: warning: Added loop label VITIS_LOOP_236_6:   [xilinx-label-all-loops]
 for (int kx=0;kx<5;++kx){
 ^~~
 VITIS_LOOP_236_6: 
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:527:2: note: FIX-IT applied suggested code changes
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:651:46: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=inbuf type=ram_1p impl=bram
                                             ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:652:47: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=outbuf type=ram_1p impl=bram
                                              ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:664:9: error: Resource with core_name: RAM_1P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=w1_loc core=RAM_1P_LUTRAM
        ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:669:47: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=w2_loc type=ram_1p impl=bram
                                              ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:675:9: error: Resource with core_name: RAM_1P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=w3_loc core=RAM_1P_LUTRAM
        ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:685:9: error: Resource with core_name: RAM_1P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=b1_loc core=RAM_1P_LUTRAM
        ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:686:9: error: Resource with core_name: RAM_1P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=b2_loc core=RAM_1P_LUTRAM
        ^
C:\Users\redre\Desktop\HAC\FinalProject\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:687:9: error: Resource with core_name: RAM_1P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=b3_loc core=RAM_1P_LUTRAM
        ^
